# cpp_helloworld

./: AGENTS.md
00-test_program/: as_if_demo.cpp  printStandard.cpp  static_cast.cpp  volatile_demo.cpp
04-basic_data_type/: CMakeLists.txt
04-basic_data_type/include/: user_input.h
04-basic_data_type/src/: test2.cpp  user_input.cpp
05-const_and_string/: CMakeLists.txt
06-calculate_symbol/: CMakeLists.txt
06-calculate_symbol/src/: main.cpp
08-control_flow/: CMakeLists.txt
08-control_flow/include/: Random.h
08-control_flow/src/: guess.cpp  main.cpp
11-function_template/: CMakeLists.txt
11-function_template/src/: main.cpp  sub.cpp
12-lvalue_and_rvalue/: CMakeLists.txt
12-lvalue_and_rvalue/src/: main.cpp
13-type/: CMakeLists.txt
13-type/src/: main.cpp  traid.cpp
14-class/: CMakeLists.txt
14-class/src/: fraction.cpp  main.cpp  point2d.cpp
15-class-more/: CMakeLists.txt
15-class-more/src/: main.cpp
ACM-Algorithm/: CMakeLists.txt
ACM-Algorithm/src/: main.cpp
F-constexpr-func/: .gitignore  CMakeLists.txt
docs/: LEARNING_PLAN.md  README.md  fetch_learncpp.py
docs/appendix_A/: a2-using-libraries-with-visual-studio-2005-express.md  a3-using-libraries-with-codeblocks.md  appendix-c-the-end.md
docs/chapter_0/: 0.1-introduction-to-these-tutorials.md  class-template-argument-deduction-ctad-and-deduction-guides.md  configuring-your-compiler-build-configurations.md  configuring-your-compiler-choosing-a-language-standard.md  introduction-to-cpp-development.md  introduction-to-the-compiler-linker-and-libraries.md  (+1 more)
docs/chapter_4/: void.md  (+13 more)
(+382 files in other folders)
